# gha-fail-digest

./: CONTRIBUTING.md  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: agent-handoff.md  coding-agent-context.md  examples.md  failure-patterns.md  github-action.md  github-actions-ci.yml
examples/: demo-transcript.md  sample-output.json
scripts/: verify_public_repo.py
src/gha_fail_digest/: __init__.py  cli.py  formatters.py  models.py  parser.py  sources.py
tests/: test_cli.py  test_parser.py
